# ai-subtitle-editor-fixed

./: CUSTOM_CODE_STRATEGY.md  README.md  ROADMAP.md  cleanup_github_repos.sh  docker-compose.yml  start-deployment-server.sh
custom/: __init__.py
custom/backend/: __init__.py
custom/backend/models/: __init__.py  subtitle_models.py
custom/backend/serializers/: __init__.py  subtitle_serializers.py
custom/backend/services/: __init__.py  (+2 more)
deployment-backend/: manage.py  requirements.txt  setup.sh
deployment-backend/deployment/: apps.py  consumers.py  routing.py  urls.py
deployment-backend/deployment_backend/: asgi.py  urls.py  wsgi.py
frontend/: README.md  cypress.config.ts  index.html  package.json  template-config.json
frontend/.quasar/: tsconfig.json
frontend/src/: App.vue  env.d.ts
scripts/: demo-subtitle.sh  integrate-custom-code.sh  launcher.sh  quick-start.sh  run-app-with-deployment.sh  run-app.sh  run-deployment-server.sh  run-docker.sh  run-tests.sh
userManagementBackend/: Dockerfile  README.md  create_stripe_prices.py  manage.py  pyproject.toml  requirements.txt  run.sh  template-config.json
userManagementBackend/app/: urls.py
userManagementBackend/config/: products.json
userManagementBackend/custom/: urls.py
userManagementBackend/custom/migrations/: 0001_initial.py
userManagementBackend/scripts/: setup.sh
userManagementBackend/template/subscriptions/: __init__.py  admin.py  apps.py  models.py  products_service.py  urls.py
userManagementBackend/template/subscriptions/migrations/: 0001_initial.py  0002_initial.py  0003_stripecustomerinfo.py
userManagementBackend/template/subscriptions/templates/: cancel.html  success.html
userManagementBackend/template/subscriptions/templates/subscriptions/: cancel.html  success.html
userManagementBackend/template/users/: apps.py  signals.py  urls.py
userManagementBackend/template/users/management/commands/: create_sample_products.py
userManagementBackend/template/users/migrations/: 0002_userprofile_avatar_url_userprofile_oauth_provider_and_more.py  0003_remove_userprofile_avatar_url_and_more.py  0004_user_account_created_at_user_email_verified_and_more.py  0005_user_google_issuer_user_google_name.py  0006_user_acquisition_channel_product_productview_and_more.py
userManagementBackend/trading_bot/: __init__.py  asgi.py  urls.py  wsgi.py
(+80 files in other folders)
