[project]
name = "user-management"
version = "0.1.0"
description = "User Management and Authentication System for Trading Bot"
authors = [
    {name = "Trading Bot Team", email = "team@tradingbot.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0.2",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.3.1",
    "django-environ>=0.11.2",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "django-redis>=5.4.0",
    "django-allauth>=0.60.1",
    "dj-rest-auth>=5.0.1",
    "djangorestframework-simplejwt>=5.3.0",
    "stripe>=7.8.0",
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.3",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "python-decouple>=3.8",
    "openai-whisper>=20250625",
    "ffmpeg-python>=0.2.0",
    "celery>=5.5.3",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trading_bot", "users", "subscriptions"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["users", "subscriptions", "features", "trading"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "djangorestframework.*",
    "allauth.*",
    "dj_rest_auth.*",
    "stripe.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "trading_bot.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short"
testpaths = ["tests"] 
